# mpicpp

./: CMakeLists.txt  README.md  mpicpp.cpp  mpicpp.hpp
cmake/: Gtest.cmake
examples/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/header/: mpicpp.hpp
lib/header/communicators/: comm.hpp
lib/header/datatype/: datatype.hpp
lib/header/error/: exception.hpp
lib/header/handles/: request.hpp  status.hpp
lib/header/mpienv/: environment.hpp
lib/header/reductionoperation/: reductionop.hpp
lib/src/: comm.cpp  datatype.cpp  environment.cpp  exception.cpp  reductionop.cpp  request.cpp
